assets/css/style.css
/* Navbar */
nav {
  background-color: #14213d;
  color: #e5e5e5;
}

.navbar-toggler-icon {
    border: 2px solid #e5e5e5;
}

.nav-link {
    color: #e5e5e5;
}

/* About */
.about {
    color: #e5e5e5;
    background:  url('../images/about.jpeg') no-repeat center;
    background-size: 100%;
    text-align: center; 
    font-size: 100%;
}

h2,
p {
    padding-bottom: 10px;
}

h2 {
    padding-top: 10px;
}

/* Map */
div#map {
    min-height: 360px;
    margin: 20px;
    border: 2px solid #14213d;
}

/* Wish List and Don't Forget*/
#wishlist,
#dontforget {
    min-height: 300px;
    border: 2px #14213d solid;
    text-align: center;
}

h4 {
    background-color: #14213d;
    color: #e5e5e5;
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
}

#dontforget {
    background:  url('../images/dontforget.jpeg') no-repeat center;
    background-size: 100%;
    color: #e5e5e5;
}

.items {
    padding-top: 5px;
    font-size: 150%;
    list-style: none;
}

/* Email */
#emailme {
    background: url('../images/divers.jpeg') no-repeat top;
    background-size: 100%;
    margin-top: 20px;
    color: #e5e5e5;
    font-size: 100%;
    text-align: center;
    padding: 10px;
}

.send {
    padding-top: 20px;
}

